--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@ body {
   padding: 0;
   background-color: #2b2929;
   color: #e0e1dd;
-  font-family: "Times New Roman", Times, serif;
+  font-family: sans-serif;
 }
 
 body {
@@ -13,6 +13,7 @@ body {
 .header-text {
   font-size: 72px;
   color: #edf2f4;
+  font-weight: bold;
 }
 
 .container {
@@ -41,7 +42,7 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  gap: 10px;
+  gap: 8px;
   grid-area: 3 / 1 / 13 / 13;
 }
 
@@ -53,7 +54,6 @@ body {
   align-items: center;
   justify-content: center;
   text-align: center;
-  overflow: hidden;
 }
 
 .card-content img {
@@ -83,8 +83,6 @@ body {
   padding: 0 30px;
   box-sizing: border-box;
   font-size: 1.5em;
-  font-family: fantasy;
-  color: #778da9;
 }
 
 .marked {
@@ -109,10 +107,9 @@ input {
   text-align: center;
 }
 .searchType {
-  /* {#2d89f1 color seleccionado}*/
   background-color: #5f5b6b;
   color: #edf2f4;
-  border-radius: 16px;
+  border-radius: 20px;
   width: 72px;
   height: 48px;
   cursor: pointer;
@@ -122,6 +119,7 @@ input {
   background-color: #2d89f1;
   color: white;
 }
+
 .searchType.false {
   background-color: #5f5b6b;
   color: white;
@@ -130,115 +128,128 @@ input {
 .searchButton {
   background-color: #1b263b;
   color: white;
-}
-
-.searchButton:hover {
-  color: white;
-  background-color: #2d89f1;
-  transition: 0.3s ease-in;
-}
-
-.slider-button {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  background-color: rgba(0, 0, 0, 0.3);
-  color: white;
   border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.input-search {
+  padding: 10px;
+  font-size: 16px;
+  border: 2px solid #1b263b;
+  border-right: none;
+  border-radius: 4px 0 0 4px;
   outline: none;
-  cursor: pointer;
-  font-size: 24px;
-  width: 40px;
-  height: 40px;
-  z-index: 10;
 }
 
-.slider-button.left {
-  left: 10px;
+.input-search:focus {
+  border-color: #2d89f1;
 }
 
-.slider-button.right {
-  right: 10px;
-}
-
-.slider-image {
-  position: absolute;
-  top: 50px;
-  transform: translate(-50%);
-  width: 100%;
-  max-height: 170px;
-  cursor: pointer;
-}
-
-.modal {
-  position: fixed;
-  z-index: 1000;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
-  display: none;
-  justify-content: center;
-  align-items: center;
-}
-
-.modal-content {
-  position: relative;
-  background-color: transparent;
-  padding: 20px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  max-width: 80%;
-  max-height: 80%;
-  overflow: auto;
-  text-align: center;
-}
-
-.modal-image {
-  max-width: 100%;
-  max-height: 100%;
-  object-fit: contain;
-}
-
-.close {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  font-size: 40px;
-  font-weight: bold;
-  cursor: pointer;
-  color: #fff;
-}
-
-.close:hover {
-  color: #ccc;
-}
-
-@media screen and (max-width: 640px) {
+@media screen and (max-width: 900px) {
   .header-text {
-    font-size: 1.5em;
+    font-size: 55px;
+    color: #edf2f4;
+    font-weight: bold;
   }
-  button,
+}
+
+@media screen and (max-width: 768px) {
+  .header-text {
+    font-size: 48px;
+    font-weight: bold;
+    text-align: center;
+    justify-content: center;
+  }
+  .searchType {
+    width: 50px;
+    font-size: 12px;
+  }
+  .searchButton,
+  .input-search,
+  .searchType {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 64px;
+    height: 32px;
+    font-size: 12px;
+    box-sizing: border-box;
+  }
+
   input {
     margin-bottom: 8px;
     margin-top: 8px;
-
-    width: 68px;
+    width: 56px;
     text-align: center;
+  }
+
+  .card-content {
+    height: auto;
+    width: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    overflow: hidden;
+    flex-basis: calc(33.33% - 10px);
+  }
+
+  .card-content img {
+    width: 100%;
+    height: auto;
+    display: block;
+  }
+
+  .card-content p {
+    margin-top: 10px;
+    font-weight: 800;
+    font-size: 1em;
+    color: white;
+    border-top: 2px solid #151515;
+    transform: translateY(-32px);
   }
 }
 
-@media screen and (max-width: 440px) {
-  .header-text {
-    font-size: 1.1em;
+@media screen and (min-width: 769px) and (max-width: 1177px) {
+  .card-content {
+    height: auto;
+    width: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     text-align: center;
+    overflow: hidden;
+    flex-basis: calc(33.33% - 10px);
   }
-  button,
-  input {
-    margin-bottom: 8px;
-    margin-top: 8px;
 
-    width: 68px;
-    text-align: center;
+  .card-content img {
+    width: 100%;
+    height: auto;
+    display: block;
+  }
+
+  .card-content p {
+    margin-top: 10px;
+    font-weight: 800;
+    font-size: 1em;
+    color: white;
+    border-top: 2px solid #151515;
+    transform: translateY(-32px);
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .card-content {
+    flex-basis: calc(45% - 10px);
+    min-width: unset;
+  }
+  .header-text {
+    font-size: 30px;
+    font-weight: bold;
   }
 }
