--- a/src/App.css
+++ b/src/App.css
@@ -66,7 +66,7 @@ body {
   display: block;
 }
 
-.card-content p {
+.card-content .name-p {
   margin-top: 10px;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-weight: 800;
@@ -208,7 +208,7 @@ input {
     display: block;
   }
 
-  .card-content p {
+  .card-content .name-p {
     margin-top: 10px;
     font-weight: 800;
     font-size: 1em;
@@ -237,13 +237,17 @@ input {
     display: block;
   }
 
-  .card-content p {
+  .card-content .name-p {
     margin-top: 10px;
     font-weight: 800;
     font-size: 1em;
     color: white;
     border-top: 2px solid #151515;
     transform: translateY(-32px);
+  }
+  .header-text {
+    font-size: 3rem;
+    font-weight: bold;
   }
 }
 
@@ -255,5 +259,9 @@ input {
   .header-text {
     font-size: 30px;
     font-weight: bold;
+  }
+  .searchByType{
+    gap: 2px;
+    
   }
 }
